# biopymlff

./: .gitignore  4znn_01_dft_gpu.com  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Pipfile  README.md  TODO.md  baysian.m  env.toml  gebf_dft.py  mkdocs.yml  mopac.mop  mopac.out  pyproject.toml  requirements.txt  setup.py  setup.sh  test-fragment.py  test-graph.py  test-mol.py  test.e3917367  test.e3933184  test.py  test.sh  test_dft_gpu.py  test_gebf_dft.py  test_gebf_pm6.py  test_gebf_pm6_vs_dft.sh  test_gpu_pm6_vs_dft.sh  test_pm6_gpu.py  train.py
4znn_01/: 4znn_01.frg  4znn_01.gjf  4znn_01.keys  4znn_01.lsi  4znn_01.lso  4znn_01.lso_0  4znn_01.lso_1  4znn_01.txt
4znn_01_gebf_dft/: 4znn_01_gebf_dft.gjf  4znn_01_gebf_dft.txt
4znn_01_gebf_pm6/: 4znn_01_gebf_pm6.gjf  4znn_01_gebf_pm6.txt
NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO/: NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.axyz  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.frg  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.gjf  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.keys  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.lsi  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.lso  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.lso_0  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.make  NCCONCCOCCCNCCOCCCNCCOCCNCCNNCCONCCOCCCNCCOCOCNCCOCOCNCCOCCCNCCOCO.pr  (+35 more)
biopymlff/: __init__.py  helper.py
docs/: latest
(+248 files in other folders)
