[tool.poetry]
name = "biopymlff"
version = "0.1.0"
description = ""
authors = ["Andre S. <axs210186 at utdallas dot edu>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow="*"
deepmd-kit="*"
ase="*"
quippy-ase="*"
mendeleev="*"
toml="*"
networkx="*"
tk="*"
multipledispatch="*"
pysmiles="*"
dscribe="*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
